# anomaly-detection-framework

./: README.md  pyproject.toml
examples/: detection_example.py
notebooks/: data.csv  detectors_research.ipynb
scripts/: anomaly_simulation.py
src/: logger.py
src/anomaly/: collection.py  database.py  detector.py  module.py  preprocessing.py
src/anomaly/methods/: average_rule.py  gaussian_mixture.py  max_rule.py  one_class_svm.py  zscore.py
src/anomaly/providers/: cpu.py  disk.py  fan.py  gpu.py  memory.py  network.py  process.py
