[tool.poetry]
name = "anomaly"
version = "0.1.0"
description = ""
authors = ["tivole <asgarovkamran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
psutil = "^6.0.0"
scikit-learn = "^1.5.1"
ruff = "^0.6.3"
pywin32 = "^306"
gputil = "^1.4.0"
seqlog = "^0.3.31"
sqlalchemy = "^2.0.32"
pandas = "^2.2.3"
wmi = "^1.5.1"
pythonnet = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
